<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) ffem (Foundation for Environmental Monitoring)
  ~
  ~ This file is part of ffem reports
  ~
  ~ ffem Reports is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ ffem Reports is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ffem Reports. If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/intro_msg_1"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:text="@string/intro_msg_2"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />


            <Button
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="16dp"
                android:onClick="onOkClicked"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/go_to_external_app"
                android:textSize="18dp"
                android:theme="?primaryButtonStyle"
                tools:ignore="SpUsage" />

        </LinearLayout>
    </LinearLayout>
</layout>