<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) ffem (Foundation for Environmental Monitoring)
  ~
  ~ This file is part of ffem reports
  ~
  ~ ffem Reports is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ ffem Reports is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ffem Reports. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/actionInfo"
        android:icon="@drawable/ic_action_name"
        android:onClick="onInfoClick"
        android:title="@string/info"
        app:showAsAction="always" />
</menu>
