...
                android:gravity="center"
                android:text="@string/copyrightMessage"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textLinkSoftwareNotices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:onClick="onSoftwareNoticesClick"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
...
